Fix: Improved GCP authentication and error handling

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -63,7 +63,12 @@ jobs:
         uses: google-github-actions/setup-gcloud@v1
 
       - name: Configure Docker for GCP Artifact Registry
-        run: gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev
+        run: |
+          if [ -z "${{ secrets.GCP_REGION }}" ]; then 
+            echo "Error: GCP_REGION is not set!"
+            exit 1
+          fi
+          gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev --quiet
 
       - name: Build and Push Docker Image
         env:
@@ -73,6 +78,10 @@ jobs:
           set -e
           if [ -z "$GCP_PROJECT_ID" ]; then 
             echo "Error: GCP_PROJECT_ID is not set!" 
+            exit 1 
+          fi
+          if [ -z "$GCP_REGION" ]; then 
+            echo "Error: GCP_REGION is not set!" 
             exit 1 
           fi
           IMAGE_NAME="$GCP_REGION-docker.pkg.dev/$GCP_PROJECT_ID/my-repo/my-python-app:latest"
@@ -94,6 +103,14 @@ jobs:
           GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
           GCP_REGION: ${{ secrets.GCP_REGION }}
         run: |
+          if [ -z "$GCP_PROJECT_ID" ]; then 
+            echo "Error: GCP_PROJECT_ID is not set!" 
+            exit 1 
+          fi
+          if [ -z "$GCP_REGION" ]; then 
+            echo "Error: GCP_REGION is not set!" 
+            exit 1 
+          fi
           gcloud run deploy my-python-app \
             --image=$GCP_REGION-docker.pkg.dev/$GCP_PROJECT_ID/my-repo/my-python-app:latest \
             --platform=managed \
