--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -69,9 +69,11 @@ jobs:
 
       - name: Configure Docker for GCP Artifact Registry
         run: |
-          set -e  # Stop execution on error
-          echo "✅ Configuring Docker authentication for region: asia-south1"
-          gcloud auth configure-docker asia-south1
+              set -e  # Stop execution on error
+              echo "✅ Configuring Docker authentication for region: asia-south1"
+              gcloud auth configure-docker asia-south1-docker.pkg.dev --quiet
+    
+
       
       
       - name: Build and Push Docker Image
